<resources>
    <string name="app_name">WxgCommonHttp</string>

    <!--登录页面的文案-->
    <string name="login_title">登录</string>
    <string name="login_username_not_empty">用户名不能为空</string>
    <string name="login_password_not_empty">密码不能为空</string>

    <!--订单模块文案-->
    <string name="orders_bottom_text">订单</string>
    <string name="orders_top_title">订单管理</string>
    <string name="orders_search_hint">请输入券号/订单号</string>
    

    <!--产品模块文案-->
    <string name="product_bottom_text">产品</string>
    <string name="product_top_title">产品管理</string>

    <!--消息模块文案-->
    <string name="message_bottom_text">消息</string>
    <string name="message_top_title">消息中心</string>

    <!--设置模块文案-->
    <string name="setting_bottom_text">设置</string>
    <string name="setting_top_title">商家设置</string>
    <string name="setting_merchant_info">商家资料</string>
    <string name="setting_business_setting">营业设置</string>
    <string name="setting_message_reminder">消息提醒</string>
    <string name="setting_edit_password">修改密码</string>
    <string name="setting_cancel_user">注销</string>

</resources>
