<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/title_bar_layout"/>

    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal"
        >

        <!--订单模块-->
        <RelativeLayout
            android:id="@+id/rl_orders_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_orders"
                android:layout_centerHorizontal="true"
                android:text="@string/orders_bottom_text"/>


        </RelativeLayout>

        <!--产品模块-->
        <RelativeLayout
            android:id="@+id/rl_product_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_product"
                android:layout_centerHorizontal="true"
                android:text="@string/product_bottom_text"/>

        </RelativeLayout>

        <!--消息模块-->
        <RelativeLayout
            android:id="@+id/rl_message_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_messages"
                android:layout_centerHorizontal="true"
                android:text="@string/message_bottom_text"/>

        </RelativeLayout>

        <!--设置模块-->
        <RelativeLayout
            android:id="@+id/rl_setting_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_setting"
                android:layout_centerHorizontal="true"
                android:text="@string/setting_bottom_text"/>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
